Fix footer height in news section on mobile screens

--- a/css/news.css
+++ b/css/news.css
@@ -179,6 +179,13 @@
 		top:10px;
 	}
 
+	footer.news {
+		height:70px;
+	}
+
+	a.contact-us {
+		top:10px;
+	}
 
 }
 
